# fake-job-detection-mlops-project

./: .dockerignore  .gitignore  Dockerfile  README.md  app_requirements.txt  artifacts.dvc  data.dvc  docker-compose.yml  dvc.yaml  params.yaml  params.yaml.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  cicd.yml
.streamlit/: config.toml
api/: __init__.py  main.py
api/config/: __init__.py
api/exception/: __init__.py  exception_handler.py
api/model/: __init__.py  input_schema.py  model_loader.py  output_schema.py
api/routes/: __init__.py  home_route.py  prediction_route.py
api/services/: __init__.py  prediction_service.py  preprocessing_service.py
interface/: app.py
interface/services/: home_page.py  prediction_page.py
interface/utils/: api_caller.py  input_format.py
src/base/: __init__.py  base_ingestor.py
src/components/: __init__.py
src/components/ingestors/: __init__.py  zipfile_ingestor.py
src/config/: __init__.py
src/constants/: __init__.py
src/entities/: __init__.py  artifact_entities.py  config_entities.py
src/entity/: __init__.py  artifact_entity.py  config_entity.py
src/exception/: __init__.py  exception_handler.py
src/logging/: __init__.py  logger.py  settings.py
src/stages/: data_ingestion.py  data_transformation.py  model_promotion.py  model_registry.py  model_trainer.py
src/steps/: data_ingestion.py
src/utils/: __init__.py  pipeline_utils.py
tests/: test_main.py  test_model_loader.py
