[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "real_fake_job_detection"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "rishabh pancholi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["real_fake_job_detection"]
include = ["pyproject.toml", "real_fake_job_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["real_fake_job_detection"]
force-sort-within-sections = true

